adjusted server paths

--- a/templates/PipelineSimulator.html
+++ b/templates/PipelineSimulator.html
@@ -37,9 +37,9 @@
 
     
 </style>
-<script src="bower_components/ace-builds/src-min-noconflict/ace.js" type="text/javascript" charset="utf-8"></script>
-<script src="bower_components/bootstrap/dist/js/bootstrap.min.js" type="text/javascript" charset="utf-8"></script>
-<link rel="stylesheet" type="text/css" href="bower_components/bootstrap/dist/css/bootstrap.min.css">
+<script src="static/bower_components/ace-builds/src-min-noconflict/ace.js" type="text/javascript" charset="utf-8"></script>
+<script src="static/bower_components/bootstrap/dist/js/bootstrap.min.js" type="text/javascript" charset="utf-8"></script>
+<link rel="stylesheet" type="text/css" href="static/bower_components/bootstrap/dist/css/bootstrap.min.css">
 
 </head>
 <body>
@@ -65,11 +65,11 @@ addi $0, $3, 6
             <tr>
                 <td style="width:10em"><p class="inst">add $0, $3, $6</p></td>
                 <td></td>
-                <td><img  src="images/pic/pic-16.png"></img></td>
-                <td><img  src="images/pic/pic-16.png"></img></td>
-                <td><img  src="images/pic/pic-16.png"></img></td>
-                <td><img  src="images/pic/pic-16.png"></img></td>
-                <td><img  src="images/pic/pic-16.png"></img></td>
+                <td><img  src="static/images/pic/pic-16.png"></img></td>
+                <td><img  src="static/images/pic/pic-16.png"></img></td>
+                <td><img  src="static/images/pic/pic-16.png"></img></td>
+                <td><img  src="static/images/pic/pic-16.png"></img></td>
+                <td><img  src="static/images/pic/pic-16.png"></img></td>
             </tr>
 
         </table>
