--- a/templates/PipelineSimulator.html
+++ b/templates/PipelineSimulator.html
@@ -3,33 +3,35 @@
 <head>
 <title>Pipeline Simulator</title>
 <style type="text/css">
-    #editor { 
+    #editor,#log { 
         
-        width: 40em;
-        height: 40em;
+        width: 50em;
+        height: 30em;
 
         top: 0;
         right: 0;
         bottom: 0;
         left: 0;
     }
-    #wrapper {
+    .wrapper {
     min-width: 100%;
     overflow: hidden; /* will contain if #first is longer than #second */
     }
-    #first {
+    .first {
+        padding-left: 1%;
         width: 40%;
-        height: 100em;
+        height: 40em;
         float:left;
     }
-    #second {
+    .second {
+        padding-left: 10%;
         overflow: scroll;
         height: 40em;
         width: 60%;
     }
     th,td,img{
         min-width: 6em;
-        width: 6em;
+        width: 15em;
     }
     .inst{
         width: 10em;
@@ -37,46 +39,67 @@
 
     
 </style>
-<script src="static/bower_components/ace-builds/src-min-noconflict/ace.js" type="text/javascript" charset="utf-8"></script>
-<script src="static/bower_components/bootstrap/dist/js/bootstrap.min.js" type="text/javascript" charset="utf-8"></script>
-<link rel="stylesheet" type="text/css" href="static/bower_components/bootstrap/dist/css/bootstrap.min.css">
+<script src="../static/bower_components/ace-builds/src-min-noconflict/ace.js" type="text/javascript" charset="utf-8"></script>
+<script src="../static/bower_components/bootstrap/dist/js/bootstrap.min.js" type="text/javascript" charset="utf-8"></script>
+<link rel="stylesheet" type="text/css" href="../static/bower_components/bootstrap/dist/css/bootstrap.min.css">
 
 </head>
-<body>
-<div id="wrapper">
-    <div id="first">
-        <div id="editor">add $0, $3, $6
-jr $ra
-addi $0, $3, 6
+<body style="margin-top:1em">
+    <div class="wrapper">
+        <div class="first">
+            <div id="editor">add $0, $3, $6
+    jr $ra
+    addi $0, $3, 6
+            </div>
+
+            <button style="margin-top:1em; margin-left:10em" class = "btn btn-primary btn-lg" onclick="Simulate()">Simulate</button>
+            <button style="margin-top:1em; margin-left:1em" class = "btn btn-primary btn-lg" onclick="Simulate()">Next Step</button>
         </div>
 
-        <button style="margin-top:1em; margin-left:5em" class = "btn btn-primary btn-lg" onclick="Simulate()">Simulate</button>
-        <button style="margin-top:1em; margin-left:1em" class = "btn btn-primary btn-lg" onclick="Simulate()">Next Step</button>
+        <div class="second">
+    <!--
+            <table>
+                <tr>
+                    <th></th> <th>Cycle n</th> <th>Cycle n+1</th> <th>Cycle n+2</th> <th>Cycle n+3</th> 
+                    <th>Cycle n+4</th> <th>Cycle n+5</th> <th>Cycle n+6</th> <th>Cycle n+7</th> <th>Cycle n+7</th><th>Cycle n+7</th><th>Cycle n+7</th><th>Cycle n+7</th><th>Cycle n+7</th><th>Cycle n+1</th> <th>Cycle n+2</th> <th>Cycle n+3</th> 
+                    <th>Cycle n+4</th> <th>Cycle n+5</th> <th>Cycle n+6</th> <th>Cycle n+7</th> <th>Cycle n+7</th><th>Cycle n+7</th><th>Cycle n+7</th><th>Cycle n+7</th><th>Cycle n+7</th>
+                </tr>
+                <tr>
+                    <td style="width:10em"><p class="inst">add $0, $3, $6</p></td>
+                    <td></td>
+                    <td><img  src="static/images/pic/pic-16.png"></img></td>
+                    <td><img  src="static/images/pic/pic-16.png"></img></td>
+                    <td><img  src="static/images/pic/pic-16.png"></img></td>
+                    <td><img  src="static/images/pic/pic-16.png"></img></td>
+                    <td><img  src="static/images/pic/pic-16.png"></img></td>
+                </tr>
+
+            </table>
+    -->
+            
+            <div id="log">batee5</div>
+
+        </div>
+
+
     </div>
+    <div class="wrapper">
 
-    <div id="second">
+        <div class="first">
+            <table style="margin-left: 40%" class="table-hover">
+                <tr><th>Register Memory Address</th><th>Data</th></tr>
+                <tr><td>0x0000000</td><td>3214</td></tr>
+            </table>
+        </div>
 
-        <table>
-            <tr>
-                <th></th> <th>Cycle n</th> <th>Cycle n+1</th> <th>Cycle n+2</th> <th>Cycle n+3</th> 
-                <th>Cycle n+4</th> <th>Cycle n+5</th> <th>Cycle n+6</th> <th>Cycle n+7</th> <th>Cycle n+7</th><th>Cycle n+7</th><th>Cycle n+7</th><th>Cycle n+7</th><th>Cycle n+7</th><th>Cycle n+1</th> <th>Cycle n+2</th> <th>Cycle n+3</th> 
-                <th>Cycle n+4</th> <th>Cycle n+5</th> <th>Cycle n+6</th> <th>Cycle n+7</th> <th>Cycle n+7</th><th>Cycle n+7</th><th>Cycle n+7</th><th>Cycle n+7</th><th>Cycle n+7</th>
-            </tr>
-            <tr>
-                <td style="width:10em"><p class="inst">add $0, $3, $6</p></td>
-                <td></td>
-                <td><img  src="static/images/pic/pic-16.png"></img></td>
-                <td><img  src="static/images/pic/pic-16.png"></img></td>
-                <td><img  src="static/images/pic/pic-16.png"></img></td>
-                <td><img  src="static/images/pic/pic-16.png"></img></td>
-                <td><img  src="static/images/pic/pic-16.png"></img></td>
-            </tr>
+        <div class="second">
+            <table style="margin-left: 10%" class="table-hover">
+                <tr><th>Data Memory Address</th><th>Data</th></tr>
+                <tr><td>0x0000000</td><td>3214</td></tr>
+            </table>
+        </div>
 
-        </table>
     </div>
-
-
-</div>
 
 
 
@@ -85,6 +108,13 @@ addi $0, $3, 6
     var editor = ace.edit("editor");
     editor.setTheme("ace/theme/monokai");
     editor.getSession().setMode("ace/mode/assembly_x86");
+
+    editor = ace.edit("log");
+    editor.setTheme("ace/theme/monokai");
+    editor.getSession().setMode("ace/mode/assembly_x86");
+    editor.container.style.pointerEvents="none"
+    editor.renderer.setStyle("disabled", true)
+    
 
 
     function Simulate() {}
