--- a/templates/PipelineSimulator.html
+++ b/templates/PipelineSimulator.html
@@ -50,10 +50,12 @@
 <body style="margin-top:1em;padding-bottom:10em;">
     <div class="wrapper">
         <div class="first">
-            <div id="editor">add $0, $3, $6
-    jr $ra
-    addi $0, $3, 6
-            </div>
+            <div id="editor">add $5, $6, $1
+xor $3, $4, $0
+slt $2, $1, $0
+lw $2, 0($6)
+sw $1, 0($2)
+bne $1, $2, 3</div>
 
             <button style="margin-top:1em; margin-left:10em" class = "btn btn-primary btn-lg" onclick="Simulate()">Simulate</button>
             <button style="margin-top:1em; margin-left:1em" class = "btn btn-primary btn-lg" onclick="Next_Step()">Next Step</button>
@@ -62,7 +64,7 @@
         <div class="second">
 
             
-            <div id="log">batee5</div>
+            <div id="log"></div>
 
         </div>
 
@@ -97,8 +99,8 @@
     editor = ace.edit("log");
     editor.setTheme("ace/theme/monokai");
     editor.getSession().setMode("ace/mode/assembly_x86");
-    editor.container.style.pointerEvents="none"
-    editor.renderer.setStyle("disabled", true)
+    //editor.container.style.pointerEvents="none"
+    //editor.renderer.setStyle("disabled", true)
 
 
     function Simulate(){
